--- a/src/QueryableFilterSpecification/QueryableFilterSpecification.csproj
+++ b/src/QueryableFilterSpecification/QueryableFilterSpecification.csproj
@@ -1,9 +1,23 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFrameworks>netstandard2.1</TargetFrameworks>
+		<PackageId>QueryableFilterSpecification</PackageId>
+		<Title>QueryableFilterSpecification</Title>
+		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+		<Authors>Anton Sadovskiy (@Antanidoss)</Authors>
+		<Company>Ardalis.com</Company>
+		<PackageProjectUrl>https://github.com/Antanidoss/Queryable-filter-specification</PackageProjectUrl>
+		<Description>Specification filters that can be combined</Description>
+		<Summary>Specification filters that can be combined</Summary>
+		<RepositoryUrl>https://github.com/Antanidoss/Queryable-filter-specification</RepositoryUrl>
+		<PackageTags>filters</PackageTags>
+		<Version>1.0.0</Version>
+		<AssemblyName>QueryableFilterSpecification</AssemblyName>
+		<Features>strict</Features>
+		<PublishRepositoryUrl>true</PublishRepositoryUrl>
+		<AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
+	</PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="LinqKit" Version="1.2.2" />
